--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,4 +1,7 @@
 /* your custom css */
+.copyright {
+    font-size: .8em;
+}
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
 }
